[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/gui/menus/facility/type/facility_type_screen.gd" type="Script" id=2]

[node name="FacilityType" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1001.0
margin_bottom = 577.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 570.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 510.0
margin_bottom = 546.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="TypeList" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 510.0
size_flags_horizontal = 3

[node name="ConfirmButton" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_left = 224.0
margin_top = 550.0
margin_right = 286.0
margin_bottom = 570.0
size_flags_horizontal = 4
text = "Confirm"

[node name="TypeDetail" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 994.0
margin_bottom = 570.0

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/TypeDetail"]
margin_right = 480.0
margin_bottom = 14.0

[node name="Art" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/TypeDetail"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 318.0
rect_min_size = Vector2( 480, 300 )
expand = true
stretch_mode = 1

[connection signal="pressed" from="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/ConfirmButton" to="." method="_on_type_confirm"]
